update images path name

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ header nav a {
 .hero .container .right {
     position: relative;
     height: 580px;
-    background: url(/images/Images2.png);
+    background: url(images/Images2.png);
     background-repeat: no-repeat;
     background-position: center center;
 
