--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: "Inter";
     background-color: #000000;
-    text-transform: capitalize;
+    text-transform: uppercase;
     color: rgb(255, 255, 255);
 }
 
@@ -480,6 +480,7 @@ header nav a {
 .training .tittle{
     display: flex;
     flex-direction: column;
+    text-align: center;
     
 }
 .training .tittle h1{
@@ -811,6 +812,113 @@ header nav a {
     }
 }
 
+/* main pogram section*/
+.program{
+    width: 90%;
+    margin: auto;
+    
+}
+
+.program .container .fa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 2rem;
+    
+}
+.program h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin: 10% auto;
+}
+.program .container .table {
+    text-align: left;
+    font-size: 0.8rem;
+    
+    
+}
+
+
+.program .container .img {
+    position: relative;
+    width: 100%;
+    min-height: 100%;
+    max-height: 550px;
+   
+    
+}
+.program .container .img img{
+   
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.program .container .img .overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    background: rgba(0,0,0,0.5);
+}
+.program .container .img .tittle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: rgba(255,255,255,0.6);
+    font-size: 0.8rem;
+
+}
+.program .container .img .tittle h3{
+    margin: 20px 0;
+    color: #BD4431;
+}
+.program .container{
+   
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    font-size: 0.65rem;
+    
+    
+}
+
+/* responsive for program section */
+
+@media screen and (min-width:280px) and (max-width:800px){
+    
+    .program .container{
+   
+        grid-template-columns: repeat(1,1fr);
+       
+    }
+    .program .container .fa{
+       
+        font-size: 0.4rem;
+        
+    }
+    .program .container .table{
+        width: 90%;
+        margin: auto;
+        font-size: 0.4rem;
+    }
+    .program .container .img {
+        width: 90%;
+        height: 100%;
+        margin: auto;
+    }
+}
+@media screen and (min-width:600px) and (max-width:800px){
+    
+  
+    .program .container .table{
+     
+        font-size: 0.5rem;
+    }
+  
+}
 /* footer section*/
 footer{
     width: 100%;
