--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-transform: capitalize;
 }
 
 body {
     font-family: "Inter";
     background-color: #000000;
-    text-transform: uppercase;
     color: rgb(255, 255, 255);
 }
 
@@ -828,6 +828,7 @@ header nav a {
     
 }
 .program h1 {
+    text-transform: capitalize;
     text-align: center;
     font-size: 2rem;
     margin: 10% auto;
